--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List!</title>
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -18,6 +24,35 @@
     <script defer src="js/script.js"></script>
 </head>
 <body>
-    
+    <div id="root">
+        <div class="container">
+            <header class="mt-5">
+                <figure class="w-25 mx-auto">
+                    <img src="img/boolean.png" alt="Boolean" class="img-fluid">
+                </figure>
+            </header>
+            <main class="w-50 mx-auto">
+                <div class="row justify-content-center my-5">
+                    <div class="card w-75 text-center mb-3">
+                        <div class="card-body align-self-center">
+                            <h2 class="mb-3 text-white text-center card-title">Cose da fare!</h2>
+                            <ul class="list-group">
+                                <li v-for="task in tasks" class="list-group-item text-white rounded-pill border-0 my-2 py-1 d-flex justify-content-between align-items-center">
+                                    {{ task.text }}
+                                    <button type="button" class="btn ms-3 text-white"><i class="fa-solid fa-trash-can"></i></button>
+                                </li>
+                                <li class="list-unstyled">
+                                    <div class="input-group mt-2">
+                                        <input type="text" class="form-control me-2 py-2 rounded-start-pill border-0" placeholder="Aggiungi un task.">
+                                        <button class="button px-2 rounded-end-circle" type="button"><i class="fa-solid fa-plus"></i></button>
+                                    </div>                                    
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
+    </div>
 </body>
 </html>
